[gd_scene load_steps=6 format=2]

[ext_resource path="res://material/yellow.tres" type="Material" id=1]
[ext_resource path="res://scripts/Blue_Puzzle.gd" type="Script" id=2]
[ext_resource path="res://Models/Puzzle_Pieces/Puzzle1_LP.fbx" type="PackedScene" id=3]
[ext_resource path="res://Models/Car/CarTextured_yellow.material" type="Material" id=4]

[sub_resource type="CylinderShape" id=1]

[node name="Blue_Puzzle" type="Area"]
script = ExtResource( 2 )
color_name = "YELLOW"
color_material = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Puzzle1_LP" parent="." instance=ExtResource( 3 )]

[node name="Body2003" parent="Puzzle1_LP" index="0"]
transform = Transform( -0.000119209, -9.73536e-05, -500, 500, 3.7749e-05, -0.000119209, 3.7749e-05, -500, 9.73536e-05, 0, -1.5, -0.35 )
material/0 = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Puzzle_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Puzzle1_LP"]
